Correct text alignment for number rows.
- Add number columns to the responsive demos (`data-o-table-data-type="numeric"`).
- Correct text alignment for number rows (`.o-table__cell--numeric`).

--- a/src/scss/_responsive-flat.scss
+++ b/src/scss/_responsive-flat.scss
@@ -18,6 +18,12 @@
 		display: table;
 	}
 
+	@include oGridRespondTo($until: S) {
+		.o-table__cell--numeric {
+			text-align: left;
+		}
+	}
+
 	td {
 		padding: 8px;
 		width: 50%;
